--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
 certifi==2019.3.9
+chardet==3.0.4
 entrypoints==0.3
 flake8==3.7.7
+idna==2.8
 isort==4.3.16
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
@@ -16,7 +18,7 @@ pylint==2.3.1
 pytest==4.3.1
 pytest-html==1.20.0
 pytest-metadata==1.8.0
-PyYAML==5.1
+requests==2.21.0
 selenium==3.141.0
 six==1.12.0
 typed-ast==1.3.1
